--- a/gin/.env
+++ b/gin/.env
@@ -1,2 +1,2 @@
 JWT_KEY=NFT3TzdhMWD1ARS5FvGNe8Hs7+x9CpiWhTX4vrxxv+g=
-MY_SQL=root:0858463561@tcp(127.0.0.1:3306)/test?charset=utf8mb4&parseTime=True&loc=Local
+MY_SQL=root:<PasswordDB>@tcp(127.0.0.1:3306)/<NameDB>?charset=utf8mb4&parseTime=True&loc=Local
